# SNIP-tool

./: README.md
backend/: Dockerfile  __init__.py  requirements.txt
backend/agents/company_matcher/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
backend/agents/company_researcher/: README.md
backend/agents/company_researcher/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_retry_counter.pckl
backend/agents/main_agent/: README.md  langgraph.json  pyproject.toml
backend/agents/main_agent/.langgraph_api/: .langgraph_ops.pckl
backend/agents/main_agent/src/: __init__.py
backend/agents/main_agent/src/main_agent/: __init__.py  configuration.py  graph.py  state.py
backend/agents/main_agent/src/main_agent/prompts/: system.jinja
backend/agents/service_categorizer/.langgraph_api/: .langgraph_ops.pckl
backend/api/: __init__.py  main.py
backend/knowledge_base/: dsa_parser.py
backend/tavily_playground/: README.md  research_demo.py
frontend/: Dockerfile  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/assessment/: page.tsx
frontend/src/hooks/: index.ts
frontend/src/lib/: utils.ts
frontend/src/services/: api.ts  index.ts
frontend/src/types/: api.ts  index.ts
host-agents/: requirements.txt
host-agents/api/: main.py
host-retriever/: .dockerignore  Dockerfile  README.md  dsa.html  start.sh
host-retriever/api/: main.py
host-retriever/api/templates/: index.html
(+34 files in other folders)
